Adding Javascript from Soro index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 		<style>
 			body{
 				padding:0;
-				margin:0;
+				margin:0;				
+			}
+			h1{
+				text-align:center;
 			}
 		</style>
 	</head>
 
 	<body>
-	
+		<h1>Cambodia Kingdom of wonder<h1>
+		<script>
+			var x=10;
+			if(x==10){
+				alert('hello world');
+			}
+		</script>
 	</body>
 </html>
